Fix links stretching to edge of page

--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -42,12 +42,17 @@ body {
   cursor: pointer;
 }
 
-#contact {
+#contact,#whoami {
   text-decoration: underline;
+  display: inline-block;
+  margin: 10px;
 }
 
-#contact:hover {
+#contact:hover,#whoami:hover {
   color: #ccc;
+  cursor:pointer;
+  display: inline-block;
+  margin: 10px;
 }
 
 .icons {
@@ -80,7 +85,7 @@ body {
   border: 0px;
   top: 50%;
   left: 50%;
-  width: 40%;
+  width: 420px;
   text-align: left;
   color: #ccc;
 }
